Pesquisar Habilitada agora
Pode fazer busca no Banco de dados

--- a/app/src/main/res/layout/activity_lista_dados.xml
+++ b/app/src/main/res/layout/activity_lista_dados.xml
@@ -24,7 +24,7 @@
 
 
         <EditText
-            android:id="@+id/editPalavre"
+            android:id="@+id/editPalavraChave"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
