--- a/app/src/main/res/layout/dialog_month_year_picker.xml
+++ b/app/src/main/res/layout/dialog_month_year_picker.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="center"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@color/white">
 
     <NumberPicker
         android:id="@+id/month_picker"
