--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_200">#66AA78</color>
     <color name="purple_500">#FF6200EE</color> <color name="purple_700">#FF3700B3</color>
 
     <color name="teal_200">#FF03DAC5</color>
@@ -8,6 +8,13 @@
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="verde_botao">#66AA78</color>
+    <color name="laranja_botao">#E3A133</color>
+    <color name="azul_botao">#6EB4BC</color>
+    <color name="azul_escuro">#004895</color>
+
+
 
     <color name="design_default_color_error">#FFED4330</color>
 </resources>
