--- a/app/src/main/res/layout/activity_lista_dados.xml
+++ b/app/src/main/res/layout/activity_lista_dados.xml
@@ -22,7 +22,9 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Encontrando evento"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"/>
 
 
         <EditText
@@ -31,7 +33,9 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:hint="Palavra Chave"
-            android:minHeight="48dp" />
+            android:minHeight="48dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -44,14 +48,17 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:hint="ANO"
-                tools:ignore="TouchTargetSizeCheck" />
+                tools:ignore="TouchTargetSizeCheck"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"/>
 
             <EditText
                 android:id="@+id/editMes"
                 android:layout_width="207dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
                 android:hint="MÊS"
                 tools:ignore="TouchTargetSizeCheck" />
         </LinearLayout>
@@ -67,7 +74,11 @@
         <ListView
             android:id="@+id/list_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:divider="@color/black"
+            android:dividerHeight="1dp"
+            android:layout_weight="1"
+             />
     </LinearLayout>
 
 
