--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,27 +48,37 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/currentMonthYearTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="16dp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:minHeight="48dp"
-                    android:padding="8dp"
-                    android:text="Mês Ano"
-                    android:textColor="@android:color/holo_blue_dark"
-                    android:textSize="22sp"
-                    android:textStyle="bold" />
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/currentMonthYearTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginBottom="16dp"
+                        android:clickable="true"
+                        android:elevation="10dp"
+
+                        android:focusable="true"
+                        android:minHeight="48dp"
+                        android:padding="8dp"
+                        android:text="Mês Ano"
+                        android:textColor="@android:color/transparent"
+                        android:textSize="22sp"
+                        android:textStyle="bold" />
 
                 <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                     android:id="@+id/calendarView"
                     android:layout_width="match_parent"
-                    android:layout_height="381dp" />
+                    android:layout_height="381dp"
+                    />
+                </FrameLayout>
             </LinearLayout>
+
+
             <TextView
                 android:id="@+id/selectedDatesTextView"
                 android:layout_width="match_parent"
